# google_trends_mcp

./: LICENSE  README.md  config.yaml  fastmcp.json  main.py  pyproject.toml  requirements.txt
.gemini/: GEMINI.md  settings.json
pytrends-mcp/: README.md  config.yaml
pytrends-mcp/src/google_trends_mcp/: cli.py  config.py  server.py
src/google_trends_mcp/: cli.py  server.py
src/google_trends_mcp/tools/: trends.py
